--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 	<title>TEST</title>
@@ -53,7 +54,7 @@
 			</div>
 			<div class="header__bottom">
 				<a href="#" class="logo header__logo">
-					<span class="logo__text">TEST</span>
+					<img class="logo__image" src="./image/header/logo.svg" alt="Логотип сети мебельных магазинов">
 					<span class="logo__descr">Сеть мебельных магазинов</span>
 				</a>
 				<div class="header__catalog">
@@ -143,6 +144,266 @@
 				</div>
 			</div>
 		</section>
+		<section class="gallery">
+			<div class="container gallery__container">
+				<h2 class="section-title gallery__title">Фотографии и&nbsp;видео</h2>
+				<div class="gallery__wrapper">
+					<div class="gallery__slider">
+						<div class="gallery__slide">
+							<div class="gallery__content">
+								<img class="gallery__image" src="./image/gallery/photo.jpg" alt="Фотография 1 из галереи">
+							</div>
+						</div>
+						<div class="gallery__slide">
+							<div class="gallery__content">
+								<video id="video" class="gallery__video" src="./image/gallery/crunchy cat.mp4" poster="./image/gallery/photo.jpg" width="260px" height="170px"></video>
+								<button class="btn-reset gallery__video-play" onclick="playPause()">
+									<svg width="45" height="45" viewBox="0 0 45 45" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<g clip-path="url(#clip0_1_706)">
+											<path d="M22.5 41.25C12.1444 41.25 3.75002 32.8556 3.75002 22.5C3.75002 12.1444 12.1444 3.75 22.5 3.75C32.8556 3.75 41.25 12.1444 41.25 22.5C41.25 32.8556 32.8556 41.25 22.5 41.25ZM19.9163 15.7781C19.8034 15.7028 19.6723 15.6596 19.5368 15.6529C19.4013 15.6463 19.2665 15.6765 19.1469 15.7404C19.0272 15.8042 18.9271 15.8994 18.8572 16.0157C18.7873 16.1319 18.7503 16.265 18.75 16.4006V28.5994C18.7503 28.735 18.7873 28.8681 18.8572 28.9844C18.9271 29.1006 19.0272 29.1958 19.1469 29.2596C19.2665 29.3235 19.4013 29.3537 19.5368 29.3471C19.6723 29.3404 19.8034 29.2972 19.9163 29.2219L29.0644 23.1244C29.1673 23.0559 29.2516 22.9631 29.31 22.8542C29.3683 22.7452 29.3989 22.6236 29.3989 22.5C29.3989 22.3764 29.3683 22.2548 29.31 22.1458C29.2516 22.0369 29.1673 21.9441 29.0644 21.8756L19.9144 15.7781H19.9163Z" fill="black" />
+										</g>
+										<defs>
+											<clipPath id="clip0_1_706">
+												<rect width="45" height="45" fill="white" />
+											</clipPath>
+										</defs>
+									</svg></button>
+							</div>
+						</div>
+						<div class="gallery__slide">
+							<div class="gallery__content">
+								<img class="gallery__image" src="./image/gallery/photo.jpg" alt="Фотография 3 из галереи">
+							</div>
+						</div>
+						<div class="gallery__slide">
+							<div class="gallery__content">
+								<img class="gallery__image" src="./image/gallery/photo.jpg" alt="Фотография 4 из галереи">
+							</div>
+						</div>
+						<div class="gallery__slide">
+							<div class="gallery__content">
+								<img class="gallery__image" src="./image/gallery/photo.jpg" alt="Фотография 5 из галереи">
+							</div>
+						</div>
+						<div class="gallery__slide">
+							<div class="gallery__content">
+								<img class="gallery__image" src="./image/gallery/photo.jpg" alt="Фотография 5 из галереи">
+							</div>
+						</div>
+						<div class="gallery__slide">
+							<div class="gallery__content">
+								<img class="gallery__image" src="./image/gallery/photo.jpg" alt="Фотография 5 из галереи">
+							</div>
+						</div>
+					</div>
+					<div class="gallery__slider-arrows">
+						<a href="#" class="gallery__slider-arrow gallery__slider-prev"></a>
+						<a href="#" class="gallery__slider-arrow gallery__slider-next">
+							<svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<circle cx="20" cy="20" r="20" fill="black"/>
+								<g clip-path="url(#clip0_1_701)">
+								<path d="M23.8647 19.0741L18.898 14.1074L20.2073 12.7982L27.4091 20L20.2073 27.2019L18.898 25.8926L23.8647 20.9259H12.5943V19.0741H23.8647Z" fill="white"/>
+								</g>
+								<defs>
+								<clipPath id="clip0_1_701">
+								<rect width="22.2222" height="22.2222" fill="white" transform="translate(8.89062 8.88892)"/>
+								</clipPath>
+								</defs>
+							</svg>
+						</a>
+					</div>
+				</div>
+				<p class="descr gallery__descr">Представляем вашему вниманию спальный гарнитур &laquo;Натали&raquo; Он&nbsp;выполнен в&nbsp;классическом стиле с&nbsp;элементами аристократии и&nbsp;роскоши. В&nbsp;комплект входят: кровать, прикроватные тумбы, несколько вариантов шкафов и&nbsp;комод с&nbsp;зеркалом. Обратите внимание, все модули комплекта вы&nbsp;можете приобрести по&nbsp;отдельности. Коллекция &laquo;Натали&raquo; может быть выполнена в&nbsp;двух цветах: в&nbsp;темном оттенке &laquo;Орех&raquo;, а&nbsp;также в&nbsp;более светлом решении &laquo;Клен Ясень Бежевый&raquo; Рекомендуем Вам обязательно посмотреть видео спальни, гостиной и&nbsp;прихожей из&nbsp;коллекции &laquo;Натали&raquo;.</p>
+			</div>
+		</section>
+		<section class="collection">
+			<div class="container collection__container">
+				<h2 class="section-title collection__title">Подборка один</h2>
+				<div class="collection__wrapper">
+					<div class="collection__left">
+						<ul class="collection__list list-reset">
+							<li class="collection__item">
+								<label class="collection__item-label">
+									<input class="collection__item-checkbox" type="checkbox">
+									<div class="collection__item-position">
+										<span class="collection__item-name">Кровать &laquo;Триумф&raquo; 160</span>
+										<span class="collection__item-price">8&nbsp;000&nbsp;₽</span>
+									</div>
+								</label>
+							</li>
+							<li class="collection__item">
+								<label class="collection__item-label">
+									<input class="collection__item-checkbox" type="checkbox">
+									<div class="collection__item-position">
+										<span class="collection__item-name">Матрас средний</span>
+										<span class="collection__item-price">10&nbsp;000&nbsp;₽</span>
+									</div>
+								</label>
+							</li>
+							<li class="collection__item">
+								<label class="collection__item-label">
+									<input class="collection__item-checkbox" type="checkbox">
+									<div class="collection__item-position">
+										<span class="collection__item-name">Тумба прикроватная</span>
+										<span class="collection__item-price">2&nbsp;000&nbsp;₽</span>
+									</div>
+								</label>
+							</li>
+							<li class="collection__item">
+								<label class="collection__item-label">
+									<input class="collection__item-checkbox" type="checkbox">
+									<div class="collection__item-position">
+										<span class="collection__item-name">Шкаф 4-дверный</span>
+										<span class="collection__item-price">10&nbsp;000&nbsp;₽</span>
+									</div>
+								</label>
+							</li>
+							<li class="collection__item">
+								<label class="collection__item-label" for="check1">
+									<input id="check1" class="collection__item-checkbox" type="checkbox">
+									<div class="collection__item-position">
+										<span class="collection__item-name">Комод</span>
+										<span class="collection__item-price">2&nbsp;000&nbsp;₽</span>
+									</div>
+								</label>
+							</li>
+							<li class="collection__item">
+								<label class="collection__item-label">
+									<input class="collection__item-checkbox" type="checkbox">
+									<div class="collection__item-position">
+										<span class="collection__item-name">Зеркало</span>
+										<span class="collection__item-price">2&nbsp;000&nbsp;₽</span>
+									</div>
+								</label>
+							</li>
+							<li class="collection__item">
+								<label class="collection__item-label">
+									<input class="collection__item-checkbox" type="checkbox">
+									<div class="collection__item-position">
+										<span class="collection__item-name">Пуф</span>
+										<span class="collection__item-price">2&nbsp;000&nbsp;₽</span>
+									</div>
+								</label>
+							</li>
+						</ul>
+						<div class="collection__count">
+							<span class="collection__count-name">Итого</span>
+							<span class="collection__count-price">2&nbsp;000&nbsp;₽</span>
+						</div>
+						<button class="btn-reset btn collection__btn">Добавить товары в&nbsp;корзину</button>
+					</div>
+					<div class="collection__right">
+						<div class="collection__slider">
+							<div class="collection__slide">
+								<picture class="collection__picture">
+									<img class="collection__image" src="./image/collection/collection-image.jpg" alt="">
+								</picture>
+								<div class="collection__content">
+									<div class="collection__content-stars">
+										<img src="./image/collection/star-icon.svg" alt="">
+										<img src="./image/collection/star-icon.svg" alt="">
+										<img src="./image/collection/star-icon.svg" alt="">
+										<img src="./image/collection/star-icon.svg" alt="">
+										<img src="./image/collection/star-half-icon.svg" alt="">
+									</div>
+									<h3 class="collection__content-subtitle">Кровать «Триумф»</h3>
+									<span class="collection__content-price">2&nbsp;000&nbsp;₽</span>
+									<button class="btn btn-reset collection__btn">В корзину</button>
+								</div>
+							</div>
+							<div class="collection__slide">
+								<picture class="collection__picture">
+									<img class="collection__image" src="./image/collection/collection-image.jpg" alt="">
+								</picture>
+								<div class="collection__content">
+									<div class="collection__content-stars">
+										<img src="./image/collection/star-icon.svg" alt="">
+										<img src="./image/collection/star-icon.svg" alt="">
+										<img src="./image/collection/star-icon.svg" alt="">
+										<img src="./image/collection/star-icon.svg" alt="">
+										<img src="./image/collection/star-half-icon.svg" alt="">
+									</div>
+									<h3 class="collection__content-subtitle">Кровать «Триумф»</h3>
+									<span class="collection__content-price">2&nbsp;000&nbsp;₽</span>
+									<button class="btn btn-reset collection__btn">В корзину</button>
+								</div>
+							</div>
+							<div class="collection__slide">
+								<picture class="collection__picture">
+									<img class="collection__image" src="./image/collection/collection-image.jpg" alt="">
+								</picture>
+								<div class="collection__content">
+									<div class="collection__content-stars">
+										<img src="./image/collection/star-icon.svg" alt="">
+										<img src="./image/collection/star-icon.svg" alt="">
+										<img src="./image/collection/star-icon.svg" alt="">
+										<img src="./image/collection/star-icon.svg" alt="">
+										<img src="./image/collection/star-half-icon.svg" alt="">
+									</div>
+									<h3 class="collection__content-subtitle">Кровать «Триумф»</h3>
+									<span class="collection__content-price">2&nbsp;000&nbsp;₽</span>
+									<button class="btn btn-reset collection__btn">В корзину</button>
+								</div>
+							</div>
+							<div class="collection__slide">
+								<picture class="collection__picture">
+									<img class="collection__image" src="./image/collection/collection-image.jpg" alt="">
+								</picture>
+								<div class="collection__content">
+									<div class="collection__content-stars">
+										<img src="./image/collection/star-icon.svg" alt="">
+										<img src="./image/collection/star-icon.svg" alt="">
+										<img src="./image/collection/star-icon.svg" alt="">
+										<img src="./image/collection/star-icon.svg" alt="">
+										<img src="./image/collection/star-half-icon.svg" alt="">
+									</div>
+									<h3 class="collection__content-subtitle">Кровать «Триумф»</h3>
+									<span class="collection__content-price">2&nbsp;000&nbsp;₽</span>
+									<button class="btn btn-reset collection__btn">В корзину</button>
+								</div>
+							</div>
+						</div>
+						<a class="collection__arrow collection__prev" href="#">
+							<svg width="33" height="34" viewBox="0 0 33 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<circle cx="16.3038" cy="16.3038" r="16.3038" transform="matrix(-1 0 0 1 32.6076 0.696167)" fill="black"/>
+								<g clip-path="url(#clip0_1_812)">
+								<path d="M13.1534 16.2452L17.2022 12.1964L16.1349 11.1291L10.264 17L16.1349 22.8709L17.2022 21.8036L13.1534 17.7548H22.3409V16.2452H13.1534Z" fill="white"/>
+								</g>
+								<defs>
+								<clipPath id="clip0_1_812">
+								<rect width="18.1153" height="18.1153" fill="white" transform="matrix(-1 0 0 1 25.36 7.94232)"/>
+								</clipPath>
+								</defs>
+							</svg>
+						</a>
+						<a class="collection__arrow collection__next" href="#">
+							<svg width="33" height="34" viewBox="0 0 33 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<circle cx="16.6966" cy="17" r="16.3038" fill="black"/>
+								<g clip-path="url(#clip0_1_807)">
+								<path d="M19.847 16.2452L15.7982 12.1964L16.8655 11.1291L22.7364 17L16.8655 22.8709L15.7982 21.8036L19.847 17.7548H10.6595V16.2452H19.847Z" fill="white"/>
+								</g>
+								<defs>
+								<clipPath id="clip0_1_807">
+								<rect width="18.1153" height="18.1153" fill="white" transform="translate(7.64032 7.94232)"/>
+								</clipPath>
+								</defs>
+							</svg>								
+						</a>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="suggestion">
+			<div class="container suggestion__container">
+				<h2 class="section-title suggestion__title">Для спальни</h2>
+			</div>
+		</section>
 	</main>
 </body>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="js/slider.js"></script>
+<script src="js/main.js"></script>
+
 </html>
