верстка секции suggestion

--- a/index.html
+++ b/index.html
@@ -396,6 +396,168 @@
 		<section class="suggestion">
 			<div class="container suggestion__container">
 				<h2 class="section-title suggestion__title">Для спальни</h2>
+				<div class="suggestion__wrapper">
+					<div class="suggestion__slider">
+						<div class="suggestion__slide">
+							<picture class="suggestion__picture">
+								<img class="suggestion__image" src="./image/suggestion/suggestion-image.jpg" alt="">
+							</picture>
+							<span class="suggestion__discount">-10%</span>
+							<div class="suggestion__content">
+								<div class="suggestion__content-stars">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-half-icon.svg" alt="">
+								</div>
+								<h3 class="suggestion__content-subtitle">Кровать «Триумф»</h3>
+								<span class="suggestion__content-old-price">18&nbsp;000&nbsp;₽</span>
+								<span class="suggestion__content-price">2&nbsp;000&nbsp;₽</span>
+								<button class="btn btn-reset suggestion__btn">В корзину</button>
+							</div>
+						</div>
+						<div class="suggestion__slide">
+							<picture class="suggestion__picture">
+								<img class="suggestion__image" src="./image/suggestion/suggestion-image.jpg" alt="">
+							</picture>
+							<span class="suggestion__discount">-10%</span>
+							<div class="suggestion__content">
+								<div class="suggestion__content-stars">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-half-icon.svg" alt="">
+								</div>
+								<h3 class="suggestion__content-subtitle">Кровать «Триумф»</h3>
+								<span class="suggestion__content-old-price">18&nbsp;000&nbsp;₽</span>
+								<span class="suggestion__content-price">2&nbsp;000&nbsp;₽</span>
+								<button class="btn btn-reset suggestion__btn">В корзину</button>
+							</div>
+						</div>
+						<div class="suggestion__slide">
+							<picture class="suggestion__picture">
+								<img class="suggestion__image" src="./image/suggestion/suggestion-image.jpg" alt="">
+							</picture>
+							<span class="suggestion__discount">-10%</span>
+							<div class="suggestion__content">
+								<div class="suggestion__content-stars">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-half-icon.svg" alt="">
+								</div>
+								<h3 class="suggestion__content-subtitle">Кровать «Триумф»</h3>
+								<span class="suggestion__content-old-price">18&nbsp;000&nbsp;₽</span>
+								<span class="suggestion__content-price">2&nbsp;000&nbsp;₽</span>
+								<button class="btn btn-reset suggestion__btn">В корзину</button>
+							</div>
+						</div>
+						<div class="suggestion__slide">
+							<picture class="suggestion__picture">
+								<img class="suggestion__image" src="./image/suggestion/suggestion-image.jpg" alt="">
+							</picture>
+							<span class="suggestion__discount">-10%</span>
+							<div class="suggestion__content">
+								<div class="suggestion__content-stars">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-half-icon.svg" alt="">
+								</div>
+								<h3 class="suggestion__content-subtitle">Кровать «Триумф»</h3>
+								<span class="suggestion__content-old-price">18&nbsp;000&nbsp;₽</span>
+								<span class="suggestion__content-price">2&nbsp;000&nbsp;₽</span>
+								<button class="btn btn-reset suggestion__btn">В корзину</button>
+							</div>
+						</div>
+						<div class="suggestion__slide">
+							<picture class="suggestion__picture">
+								<img class="suggestion__image" src="./image/suggestion/suggestion-image.jpg" alt="">
+							</picture>
+							<span class="suggestion__discount">-10%</span>
+							<div class="suggestion__content">
+								<div class="suggestion__content-stars">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-half-icon.svg" alt="">
+								</div>
+								<h3 class="suggestion__content-subtitle">Кровать «Триумф»</h3>
+								<span class="suggestion__content-old-price">18&nbsp;000&nbsp;₽</span>
+								<span class="suggestion__content-price">2&nbsp;000&nbsp;₽</span>
+								<button class="btn btn-reset suggestion__btn">В корзину</button>
+							</div>
+						</div>
+						<div class="suggestion__slide">
+							<picture class="suggestion__picture">
+								<img class="suggestion__image" src="./image/suggestion/suggestion-image.jpg" alt="">
+							</picture>
+							<span class="suggestion__discount">-10%</span>
+							<div class="suggestion__content">
+								<div class="suggestion__content-stars">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-half-icon.svg" alt="">
+								</div>
+								<h3 class="suggestion__content-subtitle">Кровать «Триумф»</h3>
+								<span class="suggestion__content-old-price">18&nbsp;000&nbsp;₽</span>
+								<span class="suggestion__content-price">2&nbsp;000&nbsp;₽</span>
+								<button class="btn btn-reset suggestion__btn">В корзину</button>
+							</div>
+						</div>
+						<div class="suggestion__slide">
+							<picture class="suggestion__picture">
+								<img class="suggestion__image" src="./image/suggestion/suggestion-image.jpg" alt="">
+							</picture>
+							<span class="suggestion__discount">-10%</span>
+							<div class="suggestion__content">
+								<div class="suggestion__content-stars">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-icon.svg" alt="">
+									<img src="./image/suggestion/star-half-icon.svg" alt="">
+								</div>
+								<h3 class="suggestion__content-subtitle">Кровать «Триумф»</h3>
+								<span class="suggestion__content-old-price">18&nbsp;000&nbsp;₽</span>
+								<span class="suggestion__content-price">2&nbsp;000&nbsp;₽</span>
+								<button class="btn btn-reset suggestion__btn">В корзину</button>
+							</div>
+						</div>
+					</div>
+					<a class="suggestion__arrow suggestion__prev" href="#">
+						<svg width="45" height="45" viewBox="0 0 33 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<circle cx="16.3038" cy="16.3038" r="16.3038" transform="matrix(-1 0 0 1 32.6076 0.696167)" fill="black"/>
+							<g clip-path="url(#clip0_1_812)">
+							<path d="M13.1534 16.2452L17.2022 12.1964L16.1349 11.1291L10.264 17L16.1349 22.8709L17.2022 21.8036L13.1534 17.7548H22.3409V16.2452H13.1534Z" fill="white"/>
+							</g>
+							<defs>
+							<clipPath id="clip0_1_812">
+							<rect width="18.1153" height="18.1153" fill="white" transform="matrix(-1 0 0 1 25.36 7.94232)"/>
+							</clipPath>
+							</defs>
+						</svg>
+					</a>
+					<a class="suggestion__arrow suggestion__next" href="#">
+						<svg width="45" height="45" viewBox="0 0 33 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<circle cx="16.6966" cy="17" r="16.3038" fill="black"/>
+							<g clip-path="url(#clip0_1_807)">
+							<path d="M19.847 16.2452L15.7982 12.1964L16.8655 11.1291L22.7364 17L16.8655 22.8709L15.7982 21.8036L19.847 17.7548H10.6595V16.2452H19.847Z" fill="white"/>
+							</g>
+							<defs>
+							<clipPath id="clip0_1_807">
+							<rect width="18.1153" height="18.1153" fill="white" transform="translate(7.64032 7.94232)"/>
+							</clipPath>
+							</defs>
+						</svg>	
+				</div>
 			</div>
 		</section>
 	</main>
